// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`authentication-mutations > login bad password 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "login",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`authentication-mutations > login bad username 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "login",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`authentication-mutations > register bad code 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "register",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`authentication-mutations > with good register code available > register use code twice 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "register",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`authentication-mutations > with good register code available > register use email twice 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "register",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`authentication-mutations > with good register code available > register use username twice 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "register",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`authentication-mutations login 1`] = `
{
  "data": {
    "login": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations login bad password 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Login failure: username or password are incorrect],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations login bad username 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Login failure: username or password are incorrect],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations register bad code 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register good 1`] = `
{
  "data": {
    "register": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register use code twice 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register use email twice 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register use username twice 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
